added i18n ITA, missing icons, footeri18, location i18, missing headers

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,8 +1,171 @@
 {
   "header": {
-    "wecan": "wecan",
-    "our": "our",
-    "us": "wir",
-    "ourlocation": "unsrstandort"
+    "whatWeDo": "cosa facciamo",
+    "ourTech": "le nostre tecnologie",
+    "us": "chi siamo",
+    "ourLocation": "dove siamo"
+  },
+  "ourValues": {
+    "titles": ["I nostri valori", "La nostra storia"],
+    "descriptions": [
+      "La nostra azienda familiare nasce nel 1964, passando il testimone da generazione in generazione è arrivata fino ad oggi. Il segreto del nostro successo risiede nella ricerca di soluzione solide precise e concrete nel campo della lavorazione dei metalli.",
+      "Il 1990 segna un anno di grande riorganizzazione per l’azienda: i fratelli Lageder ereditano il testimone dal papà, lavorando fianco a fianco fino al 2020: qui la decisone di dividere le competenze e quindi la nascita di ProLas Srl. "
+    ]
+  },
+  "whatWeDo": {
+    "subtitle": "Amiamo le sfide e le affrontiamo con un lavoro di grande precisione e qualità.",
+    "steps": [
+      {
+        "title": "Concetto e design 3D",
+        "text": "Siamo sinonimo di dinamismo e professionalità.Sviluppiamo soluzioni ottimali su richiesta del cliente: progettiamo con supporto CAD componenti e prodotti finiti, ma ci occupiamo anche dell’ottimizzazione e dell'adattamento di componenti e geometrie esistenti. Viviamo giorno dopo giorno l'innovazione."
+      },
+      {
+        "title": "Produzione di prototipi",
+        "text": "In questa fase, ci occupiamo di assistere il cliente nello sviluppo dei prototipi e della successiva fase di produzione. Nei nostri compiti rientra anche l'ottimizzazione del processo di produzione per quanto riguarda la produzione in serie. "
+      },
+      {
+        "title": "Taglio laser 2D",
+        "text": "Il sistema di taglio laser CO2 mantiene ciò che promette: alta precisione, velocità nella produzione e bordi con taglio netto e preciso anche impiegando materiali di grande spessore. ",
+        "machines": ["TruLaser 3030L"]
+      },
+      {
+        "title": "Piegatura",
+        "text": "Questo servizio comprende la piegatura di prodotti semplici e complessi. Precisione garantita su tutta la linea, fino ai decimi di millimetro.",
+        "machines": ["TrumaBend V130", "TruBend 5320", "TruBend 7050"]
+      },
+      {
+        "title": "Saldatura laser",
+        "text": "La saldatura laser con l'uso di robot è più precisa della saldatura tradizionale: l'efficienza dovuta all'aumento della velocità di saldatura, la precisione dimensionale dovuta al basso apporto di calore e all'esatta chiusura del gap così come il risparmio dovuto all'assenza di rilavorazione sono il nostro pane quotidiano, sono elementi di estrema precisione che rendono le nostre lavorazioni uniche ed inimitabili.",
+        "machines": ["TruLaser Weld 5000"]
+      },
+      {
+        "title": "Saldatura",
+        "text": "Anche il processo tradizionale di giunzione permanente viene eseguito manualmente con la massima precisione.",
+        "machines": ["Saldatrice Fronius MIG/MAG", "Saldatrice Fronius TIG/WIG"]
+      },
+      {
+        "title": "Finitura satinata",
+        "text": "Questo processo può essere utilizzato come ottimizzazione della superficie delle parti grezze per l'estetica o per altri scopi funzionali. Lo facciamo sia manualmente che meccanicamente. La perfezione è la nostra massima priorità.",
+        "machines": ["Costa MSA2 CRC+S 1350"]
+      },
+      {
+        "title": "Sbavatura",
+        "text": "Si riferisce all'arrotondamento dei bordi dei pezzi grezzi per mezzo di spazzole e smerigliatrici, azionate sia meccanicamente che manualmente. Questo processo serve a prevenire lesioni nella produzione, quindi ad aumentare la qualità finale del prodotto. La percezione più piacevole dei prodotti attraverso l’arrotondamento dei bordi interni ed esterni è una vera esperienza sensoriale.",
+        "machines": ["Costa MSA2 CRC+S 1350", "Macchine a nastro abrasivo"]
+      },
+      {
+        "title": "Foratura/Tornitura/Filettatura",
+        "text": "Il cliente è il re. Ci occupiamo di ogni passaggio richiesto.",
+        "machines": ["Trapano da pavimento"]
+      },
+      {
+        "title": "Montaggio",
+        "text": "Implementazione perfetta grazie ad anni di esperienza. Offriamo il montaggio del singole parti in prodotti finiti o semilavorati secondo le esigenze del cliente."
+      },
+      {
+        "title": "Post-elaborazione",
+        "text": "Per noi, questo significa eseguire un controllo della qualità al 100%. Nessun prodotto lascia la fabbrica senza un accurato controllo di qualità eseguito direttamente nei nostri padiglioni."
+      }
+    ]
+  },
+  "machines": {
+    "TruLaser 3030L": {
+      "name": "TruLaser 3030L",
+      "image": "https://picsum.photos/730/487",
+      "details": [
+        "Sistema di taglio laser CO2 2D di Trumpf",
+        "Anno di fabbricazione: 2010",
+        "Potenza del laser: 5000W",
+        "Dimensione della scheda: 3000x1500",
+        "Opzioni di produzione: S235JR & S355J2 fino a 25mm, Inox 304 & 316L fino a 20mm, Alluminio fino a 12 mm, Acciai speciali come Hardox, Domex, ecc.",
+        "Extra: carico e scarico automatico"
+      ]
+    },
+    "TruLaser Weld 5000": {
+      "name": "TruLaser Weld 5000",
+      "image": "https://picsum.photos/730/487",
+      "details": [
+        "Saldatrice laser di Trumpf",
+        "Anno di fabbricazione: 2018",
+        "Max. Dimensioni: 1500x1500x500",
+        "Potenza del laser: 5000W",
+        "Opzioni di produzione: Inox, acciaio, acciaio zincato a caldo, titanio"
+      ]
+    },
+    "TrumaBend V130": {
+      "name": "TrumaBend V130",
+      "image": "https://picsum.photos/730/487",
+      "details": [
+        "Macchina piegatrice di Trumpf",
+        "Anno di fabbricazione: 2000",
+        "Max. Lunghezza: 3000mm",
+        "Forza: 130KN",
+        "Max. Spessore del foglio: 6mm sulla lunghezza totale",
+        "Strumenti: uso esclusivo di strumenti di piegatura originali Trumpf"
+      ]
+    },
+    "TruBend 5320": {
+      "name": "TruBend 5320",
+      "image": "https://picsum.photos/730/487",
+      "details": [
+        "Macchina piegatrice di Trumpf",
+        "Anno di fabbricazione: 2016",
+        "Max. Lunghezza: 4000m",
+        "Forza: 320KN",
+        "Max. Spessore del foglio: 10mm sulla lunghezza totale",
+        "Strumenti: uso esclusivo di strumenti di piegatura originali Trumpf",
+        "Extra: aiuto alla piegatura per la piegatura di parti complesse, navetta portautensili come magazzino e aiuto al caricamento delle matrici di punzonatura e piegatura"
+      ]
+    },
+    "Costa MSA2 CRC+S 1350:": {
+      "name": "Costa MSA2 CRC+S 1350",
+      "image": "https://picsum.photos/730/487",
+      "details": [
+        "Sbavatrice e satinatrice Costa Levigatrici",
+        "Anno di fabbricazione: 2012",
+        "Max. Dimensioni: 4000x1350x140mm",
+        "Materiali: Inox e alluminio"
+      ]
+    }
+  },
+  "unavailableMachines": [
+    {
+      "name": "TruBend 7050 (ab Jahresende)",
+      "details": ["Biegemaschine"]
+    },
+    {
+      "name": "Biegemaschine HAEGER 824 One Touch4e (ab Jahresende)",
+      "details": ["Einpressmaschine"]
+    }
+  ],
+  "strengths": {
+    "first": [
+      {
+        "title": "Precisione",
+        "text": "Ci concentriamo sulla precisione dimensionale e sulla puntualità"
+      },
+      {
+        "title": "Flessibilità",
+        "text": "La struttura aziendale a conduzione familiare ci rende flessibili e dinamici."
+      },
+      {
+        "title": "Creatività",
+        "text": "Sviluppiamo soluzioni su misura per i nostri clienti."
+      }
+    ],
+    "second": [
+      {
+        "title": "Pulizia",
+        "text": "A partire dal nostro posto di lavoro fino al prodotto finale stesso."
+      },
+      {
+        "title": "Vicinanza ai clienti",
+        "text": "Il contatto personale con i nostri clienti è essenziale per il nostro successo."
+      },
+      {
+        "title": "Controllo di qualità al 100%",
+        "text": "I nostri prodotti sono controllati nei nostri padiglioni dalla A alla Z"
+      }
+    ]
   }
 }
