--- a/locales/it.json
+++ b/locales/it.json
@@ -169,6 +169,7 @@
   "footer": {
     "phone": "0471 052460",
     "email": "laser@prolas.it - info@prolas.it",
-    "pec": "Indirizzo PEC: info@pec.prolas.it"
+    "pec": "Indirizzo PEC: info@pec.prolas.it",
+    "jobs": "Jobs"
   }
 }
