--- a/locales/de.json
+++ b/locales/de.json
@@ -8,7 +8,8 @@
   "ourValues": {
     "titles": ["UNSERE WERTE", "UNSERE GESCHICHTE"],
     "descriptions": [
-      "Das Zusammenspiel von Tradition und Fortschritt sind Grundlage unseres Unternehmens. Neuste Technologien sind unser Werkzeug. Unser generationenüberschreitender Familienbetrieb setzt seit der Gründung im Jahre 1964 auf solide Lösungen mit maximaler Präzision im Bereich Metallverarbeitung.",
+      "Das Zusammenspiel von Tradition und Fortschritt sind Grundlage unseres Unternehmens. Neuste Technologien sind unser Werkzeug.",
+      "Unser generationenüberschreitender Familienbetrieb setzt seit der Gründung im Jahre 1964 auf solide Lösungen mit maximaler Präzision im Bereich Metallverarbeitung.",
       "Nach Übernahme und Neuausrichtung durch die Gebrüder Lageder 1990, erfolgte im Jahre 2020 die Abspaltung des Bereichs Blechverarbeitung mit Gründung der ProLas GmbH."
     ]
   },
