--- a/locales/it.json
+++ b/locales/it.json
@@ -8,7 +8,8 @@
   "ourValues": {
     "titles": ["I nostri valori", "La nostra storia"],
     "descriptions": [
-      "La fusione tra tradizione e progresso sono le fondamenta della nostra realtà familiare. Le ultime avanguardie tecnologiche sono gli strumenti per realizzare i nostri progetti. La nostra azienda familiare nasce nel 1964, passando il testimone da generazione in generazione è arrivata fino ad oggi. Il segreto del nostro successo risiede nella ricerca di soluzione solide precise e concrete nel campo della lavorazione dei metalli.",
+      "La fusione tra tradizione e progresso sono le fondamenta della nostra realtà familiare. Le ultime avanguardie tecnologiche sono gli strumenti per realizzare i nostri progetti.",
+      "La nostra azienda familiare nasce nel 1964, passando il testimone da generazione in generazione è arrivata fino ad oggi. Il segreto del nostro successo risiede nella ricerca di soluzione solide precise e concrete nel campo della lavorazione dei metalli.",
       "Il 1990 segna un anno di grande riorganizzazione per l’azienda, i fratelli Lageder ereditano il testimone dal papà, lavorando fianco a fianco fino al 2020: qui la decisone di dividere le competenze e quindi la nascita di ProLas Srl. "
     ]
   },
